<resources>
    <string name="app_name">SampleLogin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">Login</string>
    <string name="name">userName</string>
    <string name="password">Password</string>
    <string name="submit">submit</string>
    <string name="register">register</string>
    <string name="or">or</string>
    <string name="gmail">Gmail</string>
    <string name="fillAllFields">Please fill all fields.</string>
    <string name="welcome">Welcome</string>
</resources>