<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/userAvatarImg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_nike_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--Name-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInput"
        style="@style/CustomFilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@id/userAvatarImg"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <!--Gmail-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gmailInput"
        style="@style/CustomFilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/gmail"
        app:layout_constraintTop_toBottomOf="@id/nameInput"
        app:startIconDrawable="@drawable/ic_sms">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gmailEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        style="@style/CustomFilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/gmailInput"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <!--Submit-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/pink"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@id/passwordInput"
        app:layout_constraintStart_toStartOf="@id/passwordInput"
        app:layout_constraintTop_toBottomOf="@id/passwordInput" />
    <!--Loading-->
    <ProgressBar
        android:id="@+id/submitLoading"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/submitBtn"
        app:layout_constraintEnd_toEndOf="@id/submitBtn"
        app:layout_constraintStart_toStartOf="@id/submitBtn"
        app:layout_constraintTop_toTopOf="@id/submitBtn" />

    <TextView
        android:id="@+id/txtOther"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/or"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/submitBtn"
        app:layout_constraintStart_toStartOf="@id/submitBtn"
        app:layout_constraintTop_toBottomOf="@id/submitBtn"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imgGmail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/ic_google_plus"
        app:layout_constraintRight_toRightOf="@id/txtOther"
        app:layout_constraintTop_toBottomOf="@id/txtOther" />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:src="@drawable/ic_sms"
        app:layout_constraintLeft_toLeftOf="@id/txtOther"
        app:layout_constraintTop_toBottomOf="@id/txtOther" />

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:text="V1.0"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="18sp" />
</androidx.constraintlayout.widget.ConstraintLayout>